# bedrock-ui-tweaks

./: .gitignore  HACKING.md  Makefile.am  NEWS.md  README.md  configure.ac
am/: manifest.am  mcpack.am
orig/: Makefile.am
src/: Makefile.am  manifest.json.in
src/ui/: inventory_screen.json  inventory_screen_pocket.json  loom_screen.json  loom_screen_pocket.json  pause_screen.json  play_screen.json.in  start_screen.json  start_screen.json.in  stonecutter_screen.json  ui_template_tabs.json  world_templates_screen.json.in
